{
    "name": "InputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "8a8a4774-da4e-4e5b-98a0-a00b4ac3bc35",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "4eddad19-9897-4195-b825-7a2408005bbd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "259f1dea-4ed4-4e11-9aa6-bc8635a3c1e3",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "4c123da0-cd92-43e5-97b5-5282f23fd592",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6855966e-e34b-4173-98e6-176dfdb0ac28",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "27cf9e1c-0dfc-43be-88a4-ae9de4be4019",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f39ce5f8-1eb4-44c3-94f5-46ffdbd3d469",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eacd8875-7ad2-4861-b911-1142435e567f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "FireWeapon",
            "id": "63bd2b19-cd33-4d24-a917-0e606cafdcc7",
            "actions": [
                {
                    "name": "FireArrow",
                    "type": "Button",
                    "id": "024f8f46-3ce7-4bd5-807d-222d5076f598",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FireBomb",
                    "type": "Button",
                    "id": "25748e73-8af3-4eb9-b3e7-5d302885172c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireLightning",
                    "type": "Button",
                    "id": "f1c057b0-bf8a-4bf7-8289-d0b8c87b0497",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3d126680-9ac4-4af7-bb2b-e3d15a5a60d9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ba7a84c-9ec0-4156-bc0c-ad2f40cb23e7",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "217a268b-57a3-4419-8a49-6b6469d5db5e",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireLightning",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Configs",
            "id": "9268240c-d794-46ab-b204-50589ac0972c",
            "actions": [
                {
                    "name": "RotationSpeed",
                    "type": "Button",
                    "id": "84145b54-7fb8-46b1-9e40-007b307e2467",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenGameMenu",
                    "type": "Button",
                    "id": "8d7b100c-2ece-4313-84f4-55c018214d6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoToMainMenu",
                    "type": "Button",
                    "id": "c8cf5df2-6e24-4159-b0eb-4a457b23d449",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReloadLevel",
                    "type": "Button",
                    "id": "325de538-7931-4f3e-bb21-91638d0c2718",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ee7e1d2-e246-4ac9-9434-b8aaf33306a7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "908ec5e4-ef64-4cef-873b-d8692b7fe988",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenGameMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab5148f6-902f-45a4-8e23-f5777fa44fa4",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "049d73a4-2bb5-4635-8513-e8ad2a89e91a",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "ControlScheme",
            "bindingGroup": "ControlScheme",
            "devices": []
        }
    ]
}